# Agents-A1

./: README.md
docs/: index.html
evaluation/Tools/mattools/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
evaluation/Tools/mattools/src/: call_llms.py  docker_sandbox.py  json_handler.py  result_analysis.py  utils.py
evaluation/Tools/mattools/src/RAG_agent_test/: build_agent.py
evaluation/Tools/mattools/src/agentic_RAG_test/: main.py  prompt.py  rag.py  text_analysis_tool.py
evaluation/Tools/mattools/src/claude_cli_test/: build_agent.py  launch_claude.sh
evaluation/Tools/mattools/src/defects_doc/: api_overview.txt  pymatgen_analysis_defects_ccd.txt  pymatgen_analysis_defects_core.txt  pymatgen_analysis_defects_finder.txt  pymatgen_analysis_defects_generators.txt  pymatgen_analysis_defects_recombination.txt  pymatgen_analysis_defects_supercells.txt  pymatgen_analysis_defects_thermo.txt  pymatgen_analysis_defects_utils.txt
evaluation/Tools/mattools/src/mtr_rag_test/: mtb_logger.py  prompts.py  rag.py
evaluation/Tools/mattools/src/pure_agent_test/: build_agent.py
evaluation/Tools/molbench/: .env.template  .gitignore  README.md  environment.yaml  pyproject.toml
evaluation/Tools/molbench/MolClaw/: __init__.py
evaluation/Tools/molbench/config/: README.md  baseline_molbench-ms-1.yaml  baseline_molbench-ms-2.yaml  baseline_molbench-ms-3.yaml  chemcot_mo_edit.yaml  chemcot_mo_opt.yaml  claude_template.yaml
evaluation/Tools/molbench/molbench/: test_rdkit_parser_recovery.py
evaluation/Tools/molbench/molbench/eval/: __init__.py  eval_runner.py  run_eval_bench.py
evaluation/Tools/molbench/molclaw_run/data_loader/: __init__.py  bench_loaders.py
evaluation/Tools/molbench/molclaw_run/templates/: __init__.py  answer_format.md  outliners.py  template.py  tool_routing.md  variable_routing.md
evaluation/Tools/molbench/skills/: system_prompt.md
evaluation/Tools/molbench/skills/L2_workflows/: molclaw-binding-free-energy-calculation.md  (+10 more)
evaluation/Tools/molbench/utils/: fix_seed.py  llm_endpoint.py  timing.py
(+137 files in other folders)
