[project]
name = "mattoolben"
version = "0.1.0"
description = ""
authors = [
    {name = "Siyu Liu",email = "siyuliu@connect.hku.hk"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ase (==3.23.0)",
    "beautifulsoup4 (==4.12.3)",
    "langchain-openai (==0.2.14)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "openai (==1.59.3)",
    "dotenv (>=0.9.9,<0.10.0)",
    "docker (>=7.1.0,<8.0.0)",
    "langchain (==0.3.10)",
    "langchain-chroma (==0.1.4)",
    "langchain-community (==0.3.10)",
    "langchain-experimental (==0.3.3)",
    "langchain-text-splitters (==0.3.2)",
    "langgraph (==0.2.61)",
    "matplotlib (==3.10.0)",
    "optuna (==2.8.0)",
    "pandas (==2.2.2)",
    "phonopy (>=2.38.2,<3.0.0)",
    "pymatgen (==2024.8.9)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "faiss-cpu (==1.9.0.post1)",
    "pymatgen-analysis-defects (==2024.7.19)",
    "tree-sitter (>=0.24.0,<0.25.0)",
    "pydefect (==0.9.5)",
    "pytest (==8.3.2)",
    "notebook (>=7.4.1,<8.0.0)",
    "loguru (==0.7.2)",
    "docstring-parser (==0.16)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scienceplots (>=2.1.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
