[project]
name = "molclaw-local"
version = "0.0.0"
description = "Local uv environment for MolClaw benchmark runners and evaluators."
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "numpy>=1.26",
    "openai>=2.0",
    "pandas>=2.0",
    "pytdc>=0.3.6",
    "pyyaml>=6.0",
    "rdkit>=2024.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MolClaw", "molbench"]

[tool.uv]
package = false
